# mplot

./: README  initcode.sh
fconv/: Makefile  cdwrite.c  cdwrite.h  fconv.c  fconv.h  hm.c  hm.h
findnode/: Makefile  main.c  saida.txt  teste3s.txt
gencases/: Makefile  main.c  saida.txt  saida2.txt
gera_elipse/: Makefile  main.c  saida.txt
mesh2col/: Makefile  entrada.hm  main.c  plot.gnu  plot.gri  plot.ps
meshview/: Makefile  main.c  tomcr3b.200.txt  tomcr3b.200a.txt
mplotwin/: Makefile  Makefile.linux  SFont.c  libSDL_image.la  libmplot.so.0.1  main.c  main_bk.c  mplot.c  mplot.h  mplot.so.0.1  mplot_c.h  mplot_p.h  mplotwin.dev  mtest.exe.stackdump  stdout.txt
scaler/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  scaler.glade
scaler/intl/: Makefile
scaler/macros/: Makefile  Makefile.in  gnome.m4
scaler/po/: ChangeLog  Makefile  Makefile.in
scaler/src/: Makefile  Makefile.am  Makefile.in  Makefile2  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  main.h
